--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ a:hover {
 
 .navbar .navbar-nav .nav-link:hover,
 .navbar .navbar-nav .nav-link.active {
-  color: var(--secondary) !important;
+  color: #FFD200 !important;
   text-decoration: none !important;
   border: none;
 }
@@ -124,7 +124,7 @@ a:hover {
 .navbar .fab:hover,
 .navbar .fa-brands:hover,
 .navbar .fa:hover {
-  color: #F79A20 !important;
+  color: #FFD200 !important;
 }
 
 /* Forzar visibilidad y color de iconos en el navbar */
@@ -140,12 +140,7 @@ a:hover {
 #mainNavbar .btn-outline-light:hover .fab,
 #mainNavbar .btn-outline-light:hover .fa-brands,
 #mainNavbar .btn-outline-light:hover .fa {
-  color: #F79A20 !important;
-}
-
-/* Corrige el gap si Bootstrap no lo soporta */
-.gap-2>*+* {
-  margin-left: 0.5rem !important;
+  color: #FFD200 !important;
 }
 
 
@@ -270,7 +265,7 @@ a:hover {
 }
 
 .custom-card:hover .custom-card-content h4 {
-  color: var(--secondary) !important;
+  color: #FFD200 !important;
 }
 
 .custom-card-content p {
@@ -280,8 +275,8 @@ a:hover {
   text-align: justify;
 }
 
-.custom-card-content:hover p {
-  color: (var(--secondary));
+.custom-card-content:hover .text-pack {
+  color: #FFD200 !important;
 }
 
 
