--- a/css/style.css
+++ b/css/style.css
@@ -346,3 +346,8 @@ a.boton:hover {
     color: #fff !important;
   }
 }
+
+/* Cambia el color de las barras del botón hamburguesa */
+.navbar-light .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,<svg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'><path stroke='%23FFFFFF' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/></svg>");
+}
